fix: set font size on small screens to 16px

--- a/style.css
+++ b/style.css
@@ -96,7 +96,6 @@ main {
 
 footer {
   padding: 0 0.75rem;
-  font-size: 0.875rem;
 }
 
 section {
@@ -146,11 +145,19 @@ project-card a {
   text-align: center;
   padding: 0.375rem 0.5rem;
   border-radius: 0.375rem;
-  font-size: 0.875rem;
   font-weight: medium;
 
   &:hover {
     background-color: color-mix(in oklab, var(--foreground) 80%, transparent);
+  }
+}
+
+/* text should at least 16px on small screens like phones. only update font-size on larger screens. */
+@media only screen and (min-width: 640px) {
+  footer,
+  section-header a,
+  project-card a {
+    font-size: 0.875rem;
   }
 }
 
